--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
 		<url>http://github.com/palladiosimulator/palladio-build-mavenparent/tree/master</url>
 	</scm>
 
+	<properties>
+		<tycho.version>1.1.0</tycho.version>
+	</properties>
+
 	<profiles>
 
 		<!-- Build configuration of parent POM itself -->
@@ -44,7 +48,7 @@
 					<exists>localBuild12464</exists>
 				</file>
 			</activation>
-			
+
 			<distributionManagement>
 				<snapshotRepository>
 					<id>ossrh</id>
@@ -103,22 +107,65 @@
 		</profile>
 
 		<profile>
-			<id>tycho-build</id>
+			<id>tycho-build-disable-tp-refresh</id>
 			<activation>
 				<file>
-					<missing>localBuild12464</missing>
+					<exists>disableRefreshedTPUsage</exists>
 				</file>
 			</activation>
 			<properties>
-				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-				<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-				<java.version>1.8</java.version>
-				<maven.compiler.target>1.8</maven.compiler.target>
-				<maven.compiler.source>1.8</maven.compiler.source>
-				<xtext.version>2.12.0</xtext.version>
-				<tycho.version>1.1.0</tycho.version>
-				<org.palladiosimulator.maven.tychotprefresh.version>0.2.0</org.palladiosimulator.maven.tychotprefresh.version>
-				<org.palladiosimulator.maven.tychotprefresh.tplocation.0>org.palladiosimulator:target-platform-base:0.1.0:oxygen:target</org.palladiosimulator.maven.tychotprefresh.tplocation.0>
+				<org.palladiosimulator.maven.tychotprefresh.disable>true</org.palladiosimulator.maven.tychotprefresh.disable>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>target-platform-configuration</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+							<environments>
+								<environment>
+									<os>linux</os>
+									<ws>gtk</ws>
+									<arch>x86</arch>
+								</environment>
+								<environment>
+									<os>linux</os>
+									<ws>gtk</ws>
+									<arch>x86_64</arch>
+								</environment>
+								<environment>
+									<os>win32</os>
+									<ws>win32</ws>
+									<arch>x86</arch>
+								</environment>
+								<environment>
+									<os>win32</os>
+									<ws>win32</ws>
+									<arch>x86_64</arch>
+								</environment>
+								<environment>
+									<os>macosx</os>
+									<ws>cocoa</ws>
+									<arch>x86_64</arch>
+								</environment>
+							</environments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>tycho-build-tp-refresh</id>
+			<activation>
+				<file>
+					<missing>disableRefreshedTPUsage</missing>
+				</file>
+			</activation>
+			<properties>
+				<org.palladiosimulator.maven.tychotprefresh.version>0.2.1</org.palladiosimulator.maven.tychotprefresh.version>
+				<org.palladiosimulator.maven.tychotprefresh.tplocation.0>org.palladiosimulator:target-platform-base:0.1.1:oxygen:target</org.palladiosimulator.maven.tychotprefresh.tplocation.0>
 				<org.palladiosimulator.maven.tychotprefresh.tpproject.groupId>org.palladiosimulator</org.palladiosimulator.maven.tychotprefresh.tpproject.groupId>
 				<org.palladiosimulator.maven.tychotprefresh.tpproject.artifactId>target-platform-merged-temporary</org.palladiosimulator.maven.tychotprefresh.tpproject.artifactId>
 				<org.palladiosimulator.maven.tychotprefresh.tpproject.version>1.0.0</org.palladiosimulator.maven.tychotprefresh.tpproject.version>
@@ -126,7 +173,6 @@
 				<org.palladiosimulator.maven.tychotprefresh.tpproject.type>target</org.palladiosimulator.maven.tychotprefresh.tpproject.type>
 			</properties>
 			<build>
-
 				<plugins>
 					<plugin>
 						<groupId>org.palladiosimulator</groupId>
@@ -141,7 +187,69 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>target-platform-configuration</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+							<target>
+								<artifact>
+									<groupId>${org.palladiosimulator.maven.tychotprefresh.tpproject.groupId}</groupId>
+									<artifactId>${org.palladiosimulator.maven.tychotprefresh.tpproject.artifactId}</artifactId>
+									<version>${org.palladiosimulator.maven.tychotprefresh.tpproject.version}</version>
+									<classifier>${org.palladiosimulator.maven.tychotprefresh.tpproject.classifier}</classifier> 
+								</artifact>
+							</target>
+							<environments>
+								<environment>
+									<os>linux</os>
+									<ws>gtk</ws>
+									<arch>x86</arch>
+								</environment>
+								<environment>
+									<os>linux</os>
+									<ws>gtk</ws>
+									<arch>x86_64</arch>
+								</environment>
+								<environment>
+									<os>win32</os>
+									<ws>win32</ws>
+									<arch>x86</arch>
+								</environment>
+								<environment>
+									<os>win32</os>
+									<ws>win32</ws>
+									<arch>x86_64</arch>
+								</environment>
+								<environment>
+									<os>macosx</os>
+									<ws>cocoa</ws>
+									<arch>x86_64</arch>
+								</environment>
+							</environments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 
+		<profile>
+			<id>tycho-build</id>
+			<activation>
+				<file>
+					<missing>localBuild12464</missing>
+				</file>
+			</activation>
+			<properties>
+				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+				<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+				<java.version>1.8</java.version>
+				<maven.compiler.target>1.8</maven.compiler.target>
+				<maven.compiler.source>1.8</maven.compiler.source>
+				<xtext.version>2.12.0</xtext.version>
+			</properties>
+			<build>
+				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
@@ -215,49 +323,6 @@
 						<artifactId>tycho-maven-plugin</artifactId>
 						<version>${tycho.version}</version>
 						<extensions>true</extensions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>target-platform-configuration</artifactId>
-						<version>${tycho.version}</version>
-						<configuration>
-							<target>
-								<artifact>
-									<groupId>${org.palladiosimulator.maven.tychotprefresh.tpproject.groupId}</groupId>
-									<artifactId>${org.palladiosimulator.maven.tychotprefresh.tpproject.artifactId}</artifactId>
-									<version>${org.palladiosimulator.maven.tychotprefresh.tpproject.version}</version>
-									<classifier>${org.palladiosimulator.maven.tychotprefresh.tpproject.classifier}</classifier> 
-								</artifact>
-							</target>
-							<environments>
-								<environment>
-									<os>linux</os>
-									<ws>gtk</ws>
-									<arch>x86</arch>
-								</environment>
-								<environment>
-									<os>linux</os>
-									<ws>gtk</ws>
-									<arch>x86_64</arch>
-								</environment>
-								<environment>
-									<os>win32</os>
-									<ws>win32</ws>
-									<arch>x86</arch>
-								</environment>
-								<environment>
-									<os>win32</os>
-									<ws>win32</ws>
-									<arch>x86_64</arch>
-								</environment>
-								<environment>
-									<os>macosx</os>
-									<ws>cocoa</ws>
-									<arch>x86_64</arch>
-								</environment>
-							</environments>
-						</configuration>
 					</plugin>
 
 
