--- a/pom.xml
+++ b/pom.xml
@@ -369,6 +369,18 @@
 						<extensions>true</extensions>
 					</plugin>
 
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-surefire-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+							<includes>
+								<include>**/*Test.java</include>
+								<include>**/*Tests.java</include>
+							</includes>
+							<failIfNoTests>false</failIfNoTests>
+						</configuration>
+					</plugin>
 
 				</plugins>
 			</build>
