--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
 						<groupId>org.palladiosimulator</groupId>
 						<artifactId>tycho-tp-refresh-maven-plugin</artifactId>
 					</plugin>
-				
+
 					<!-- Build (general) -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -136,7 +136,7 @@
 						<groupId>org.eclipse.xtend</groupId>
 						<artifactId>xtend-maven-plugin</artifactId>
 					</plugin>
-				
+
 					<!-- Build (tycho) -->
 					<plugin>
 						<groupId>org.eclipse.tycho</groupId>
@@ -150,7 +150,7 @@
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>tycho-p2-plugin</artifactId>
 					</plugin>
-					
+
 					<plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>tycho-maven-plugin</artifactId>
@@ -213,7 +213,7 @@
 				<java.version>1.8</java.version>
 				<maven.compiler.target>1.8</maven.compiler.target>
 				<maven.compiler.source>1.8</maven.compiler.source>
-				<xtext.version>2.12.0</xtext.version>
+				<xtext.version>2.12.0</xtext.version> <!-- have a look at the plugin dependencies when changing the version! -->
 				<jacoco.version>0.8.1</jacoco.version>
 			</properties>
 			<build>
@@ -308,6 +308,23 @@
 									</configuration>
 								</execution>
 							</executions>
+							<dependencies>
+								<dependency>
+									<groupId>org.eclipse.jdt</groupId>
+									<artifactId>org.eclipse.jdt.core</artifactId>
+									<version>3.12.2</version>
+								</dependency>
+								<dependency>
+									<groupId>org.eclipse.platform</groupId>
+									<artifactId>org.eclipse.core.runtime</artifactId>
+									<version>3.12.0</version>
+								</dependency>
+								<dependency>
+									<groupId>org.eclipse.platform</groupId>
+									<artifactId>org.eclipse.equinox.common</artifactId>
+									<version>3.8.0</version>
+								</dependency>
+							</dependencies>
 						</plugin>
 
 						<plugin>
