Use version 0.4.3 of parent POMs

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
 	</properties>
 
 	<modules>
-		<module>updatesite</module>
 		<module>product</module>
+		<module>updatesite</module>
+		<module>updatesite-notp</module>
 	</modules>
 
 </project>
