--- a/updatesite-notp/pom.xml
+++ b/updatesite-notp/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>tools.mdsd</groupId>
 		<artifactId>eclipse-parent-updatesite-notp</artifactId>
-		<version>0.7.1</version>
+		<version>0.7.2-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 	<groupId>org.palladiosimulator</groupId>
@@ -18,6 +18,28 @@
 	<packaging>pom</packaging>
 
 	<profiles>
+		<profile>
+			<id>nightly-dependencies</id>
+			<activation>
+				<property>
+					<name>!release</name>
+				</property>
+			</activation>
+			<repositories>
+				<repository>
+					<id>central</id>
+					<url>https://repo.maven.apache.org/maven2/</url>
+				</repository>
+				<repository>
+					<id>sonatype-staging</id>
+					<url>https://oss.sonatype.org/content/groups/staging/</url>
+				</repository>
+				<repository>
+					<id>sonatype-snapshots</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+				</repository>
+			</repositories>
+		</profile>
 
 		<profile>
 			<id>palladio-build-customizations</id>
