--- a/updatesite-notp/pom.xml
+++ b/updatesite-notp/pom.xml
@@ -33,7 +33,7 @@
 						<enabled>false</enabled>
 					</releases>
 					<snapshots>
-						<updatePolicy>never</updatePolicy>
+						<updatePolicy>always</updatePolicy>
 					</snapshots>
 				</repository>
 			</repositories>
