--- a/eclipse/pom.xml
+++ b/eclipse/pom.xml
@@ -101,14 +101,14 @@
 								<goals>
 									<goal>sign</goal>
 								</goals>
+								<configuration>
+									<gpgArguments>
+										<arg>--pinentry-mode</arg>
+										<arg>loopback</arg>
+									</gpgArguments>
+								</configuration>
 							</execution>
 						</executions>
-						<configuration>
-							<gpgArguments>
-								<arg>--pinentry-mode</arg>
-								<arg>loopback</arg>
-							</gpgArguments>
-						</configuration>
 					</plugin>
 				</plugins>
 			</build>
@@ -128,24 +128,43 @@
 				<updatesite.aggregator.filename>target/classes/nightly.aggr</updatesite.aggregator.filename>
 			</properties>
 
-			<pluginRepositories>
-				<pluginRepository>
-					<id>sonatype-snapshots</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<repositories>
+				<repository>
+					<name>Central Portal Snapshots</name>
+					<id>central-portal-snapshots</id>
+					<url>https://central.sonatype.com/repository/maven-snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
 					<snapshots>
+						<enabled>true</enabled>
+						<updatePolicy>always</updatePolicy>
+					</snapshots>
+				</repository>
+			</repositories>
+
+			<pluginRepositories>
+				<pluginRepository>
+					<name>Central Portal Snapshots</name>
+					<id>central-portal-snapshots</id>
+					<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+					<releases>
+						<enabled>false</enabled>
+					</releases>
+					<snapshots>
+						<enabled>true</enabled>
 						<updatePolicy>always</updatePolicy>
 					</snapshots>
 				 </pluginRepository>
 				 <pluginRepository>
+				 	<name>Tycho Snapshots</name>
 					<id>tycho-snapshots</id>
 					<url>https://repo.eclipse.org/content/repositories/tycho-snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
 					<snapshots>
+						<enabled>true</enabled>
 						<updatePolicy>always</updatePolicy>
 					</snapshots>
 				 </pluginRepository>
@@ -363,6 +382,41 @@
 			<build>
 				<pluginManagement>
 					<plugins>
+						<plugin>
+							<groupId>org.eclipse.tycho</groupId>
+							<artifactId>target-platform-configuration</artifactId>
+							<version>${tycho.version}</version>
+							<configuration>
+								<environments>
+									<environment>
+										<os>linux</os>
+										<ws>gtk</ws>
+										<arch>x86_64</arch>
+									</environment>
+									<environment>
+										<os>linux</os>
+										<ws>gtk</ws>
+										<arch>aarch64</arch>
+									</environment>
+									<environment>
+										<os>win32</os>
+										<ws>win32</ws>
+										<arch>x86_64</arch>
+									</environment>
+									<environment>
+										<os>macosx</os>
+										<ws>cocoa</ws>
+										<arch>x86_64</arch>
+									</environment>
+									<environment>
+										<os>macosx</os>
+										<ws>cocoa</ws>
+										<arch>aarch64</arch>
+									</environment>
+								</environments>
+							</configuration>
+						</plugin>
+
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-compiler-plugin</artifactId>
