--- a/eclipse/product/pom.xml
+++ b/eclipse/product/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.palladiosimulator</groupId>
 		<artifactId>eclipse-parent</artifactId>
-		<version>0.9.0-SNAPSHOT</version>
+		<version>0.9.0</version>
 		<relativePath/>
 	</parent>
 	<groupId>org.palladiosimulator</groupId>
