--- a/eclipse/pom.xml
+++ b/eclipse/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.palladiosimulator</groupId>
 	<artifactId>eclipse-parent</artifactId>
-	<version>0.9.0</version>
+	<version>0.10.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>A common parent POM for all Eclipse builds of Palladio.</description>
 	<url>http://palladiosimulator.org</url>
