Move aggregator profiles to updatesite-notp
Since the `nightly`, `release`, and `updatesite-maven-aggregator` profiles are only required in `eclipse-parent-updatesite-notp`, they were removed from `eclipse-parent` and moved there.

--- a/eclipse/updatesite-notp/pom.xml
+++ b/eclipse/updatesite-notp/pom.xml
@@ -18,6 +18,109 @@
 	<profiles>
 
 		<profile>
+			<id>nightly</id>
+			<activation>
+				<property>
+					<name>!release</name>
+				</property>
+			</activation>
+			<properties>
+				<updatesite.aggregator.filename>target/classes/nightly.aggr</updatesite.aggregator.filename>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>release</id>
+			<activation>
+				<property>
+					<name>release</name>
+				</property>
+			</activation>
+			<properties>
+				<updatesite.aggregator.filename>target/classes/release.aggr</updatesite.aggregator.filename>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>updatesite-maven-aggregator</id>
+			<activation>
+				<file>
+					<exists>updatesite-aggr</exists>
+				</file>
+			</activation>
+			<build>
+				<resources>
+					<resource>
+						<directory>updatesite-aggr</directory>
+						<filtering>true</filtering>
+					</resource>
+				</resources>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-eclipserun-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>eclipse-run</goal>
+								</goals>
+								<phase>package</phase>
+							</execution>
+						</executions>
+						<configuration>
+							<applicationsArgs>
+								<args>-data</args>
+								<args>${project.build.directory}/eclipserun-work/</args>
+								<args>-application</args>
+								<args>org.eclipse.cbi.p2repo.cli.headless</args>
+								<args>aggregate</args>
+								<args>--buildModel</args>
+								<args>${updatesite.aggregator.filename}</args>^
+								<args>--smtpHost</args>
+								<args>${updatesite.aggregator.smtpHost}</args>
+								<args>--action</args>
+								<args>BUILD</args>
+							</applicationsArgs>
+							<dependencies>
+								<dependency>
+									<artifactId>org.eclipse.cbi.p2repo.aggregator.engine.feature</artifactId>
+									<type>eclipse-feature</type>
+								</dependency>
+								<dependency>
+									<artifactId>org.eclipse.equinox.core.feature</artifactId>
+									<type>eclipse-feature</type>
+								</dependency>
+								<dependency>
+									<artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
+									<type>eclipse-feature</type>
+								</dependency>
+								<dependency>
+									<artifactId>org.eclipse.core.net</artifactId>
+									<type>eclipse-plugin</type>
+								</dependency>
+							</dependencies>
+							<repositories>
+								<repository>
+									<id>cbi-aggregator</id>
+									<layout>p2</layout>
+									<url>http://download.eclipse.org/cbi/updates/aggregator/headless/4.13/</url>
+								</repository>
+								<repository>
+									<id>Eclipse 2021-12</id>
+									<layout>p2</layout>
+									<url>http://download.eclipse.org/releases/2021-12</url>
+								</repository>
+							</repositories>
+							<work>${project.build.directory}/eclipserun-work</work>
+							<executionEnvironment>JavaSE-17</executionEnvironment>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
 			<id>palladio-build-customizations</id>
 			<activation>
 				<file>
