--- a/eclipse/pom.xml
+++ b/eclipse/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.10.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>A common parent POM for all Eclipse builds of Palladio.</description>
-	<url>http://palladiosimulator.org</url>
+	<url>https://palladio-simulator.com</url>
 	<packaging>pom</packaging>
 
 	<licenses>
