--- a/eclipse/updatesite/pom.xml
+++ b/eclipse/updatesite/pom.xml
@@ -101,6 +101,245 @@
 			</build>
 		</profile>
 
+		<profile>
+			<id>tycho-javadoc-for-updatesite</id>
+			<activation>
+				<file>
+					<exists>category.xml</exists>
+				</file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-document-bundle-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<executions>
+							<execution>
+								<id>eclipse-javadoc</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>javadoc</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${project.build.directory}/repository/javadoc</outputDirectory>
+									<skipTocGen>true</skipTocGen>
+									<javadocOptions>
+										<additionalArguments>
+											<additionalArgument>${javadoc.args}</additionalArgument>
+											<additionalArgument>${javadoc.additional.args}</additionalArgument>
+										</additionalArguments>
+									</javadocOptions>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>tycho-javadoc-for-bundle</id>
+			<activation>
+				<file>
+					<exists>META-INF/MANIFEST.MF</exists>
+				</file>
+				<property>
+					<name>generateJavaDocPerBundle</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-document-bundle-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<executions>
+							<execution>
+								<id>artifact-javadoc</id>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>javadoc</goal>
+								</goals>
+								<configuration>
+									<skipTocGen>true</skipTocGen>
+									<outputDirectory>${project.build.directory}/javadoc</outputDirectory>
+									<javadocOptions>
+										<additionalArguments>
+											<additionalArgument>${javadoc.args}</additionalArgument>
+											<additionalArgument>${javadoc.additional.args}</additionalArgument>
+										</additionalArguments>
+									</javadocOptions>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<version>3.4.2</version>
+						<executions>
+							<execution>
+								<id>artifact-javadoc-package</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+								<configuration>
+									<archive>
+										<addMavenDescriptor>false</addMavenDescriptor>
+									</archive>
+									<classesDirectory>${project.build.directory}/javadoc</classesDirectory>
+									<classifier>javadoc</classifier>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>execute-generate-workflow</id>
+			<activation>
+				<file>
+					<exists>workflow/generate.mwe2</exists>
+				</file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>3.5.1</version>
+						<executions>
+							<execution>
+								<id>ExecuteMWE2LauncherForGenerate</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>java</goal>
+								</goals>
+								<configuration>
+									<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+									<arguments>
+										<argument>/${project.basedir}/workflow/generate.mwe2</argument>
+										<argument>-p</argument>
+										<argument>workspaceRoot=/${maven.multiModuleProjectDirectory}</argument>
+									</arguments>
+									<classpathScope>compile</classpathScope>
+									<includePluginDependencies>true</includePluginDependencies>
+									<cleanupDaemonThreads>false</cleanupDaemonThreads> <!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>execute-clean-workflow</id>
+			<activation>
+				<file>
+					<exists>workflow/clean.mwe2</exists>
+				</file>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>3.5.1</version>
+						<executions>
+							<execution>
+								<id>ExecuteMWE2LauncherForClean</id>
+								<phase>clean</phase>
+								<goals>
+									<goal>java</goal>
+								</goals>
+								<configuration>
+									<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+									<arguments>
+										<argument>/${project.basedir}/workflow/clean.mwe2</argument>
+										<argument>-p</argument>
+										<argument>workspaceRoot=/${maven.multiModuleProjectDirectory}</argument>
+									</arguments>
+									<classpathScope>compile</classpathScope>
+									<includePluginDependencies>true</includePluginDependencies>
+									<cleanupDaemonThreads>false</cleanupDaemonThreads> <!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>enable-dagger</id>
+			<activation>
+				<file>
+					<exists>.enable_dagger_annotation_processing</exists>
+				</file>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.14.0</version>
+						<executions>
+							<execution>
+								<id>process-dagger-annotations</id>
+								<goals>
+									<goal>compile</goal>
+								</goals>
+								<phase>generate-sources</phase>
+								<configuration>
+									<annotationProcessorPaths>
+										<annotationProcessorPath>
+											<groupId>com.google.dagger</groupId>
+											<artifactId>dagger-compiler</artifactId>
+											<version>2.31</version>
+										</annotationProcessorPath>
+									</annotationProcessorPaths>
+									<proc>only</proc>
+									<generatedSourcesDirectory>${project.basedir}/src-gen/</generatedSourcesDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-clean-plugin</artifactId>
+						<version>3.5.0</version>
+						<executions>
+							<execution>
+								<id>clean-src-gen</id>
+								<phase>clean</phase>
+								<goals>
+									<goal>clean</goal>
+								</goals>
+								<configuration>
+									<excludeDefaultDirectories>true</excludeDefaultDirectories>
+									<filesets>
+										<fileset>
+											<directory>${project.basedir}</directory>
+											<includes>
+												<include>src-gen/**</include>
+											</includes>
+											<excludes>
+												<exclude>*/.gitkeep</exclude>
+											</excludes>
+										</fileset>
+									</filesets>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 	</profiles>
 
 </project>
