--- a/eclipse/updatesite/pom.xml
+++ b/eclipse/updatesite/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>eclipse-parent-updatesite</artifactId>
 	<name>${project.artifactId}</name>
 	<description>A common parent POM for all Eclipse Update Site builds of Palladio.</description>
-	<url>http://palladiosimulator.org</url>
+	<url>https://palladio-simulator.com</url>
 	<packaging>pom</packaging>
 
 	<profiles>
